--- a/views/index.jade
+++ b/views/index.jade
@@ -5,5 +5,6 @@ block content
   p count #{count}
   each item in results
     p !{item.title}, !{item.price}, !{item.views} views, !{item.num_favorers} favorites
+    img(src='#{item.MainImage.url_170x135}')
     p !{item.tags}
     p &nbsp;
