--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,14 @@
 doctype html
 html
+
   head
     title= title
+
     link(rel='stylesheet', href='/stylesheets/style.css')
+    
+    // Bootstrap minified CSS CDN
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
+
   body
-    block content
+    .container
+        block content
