--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,18 +6,29 @@ body {
     font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
 }
 
-#header {
-    background-color: #fff;
-    padding: 30px 0px;
+
+.navbar {
+    margin-bottom: 0px;
 }
 
-#logo {
+.navbar-default {
+    border: none;
+}
+
+.navbar-default .navbar-brand {
     color: #555;
     font-family: 'Montserrat', sans-serif;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     letter-spacing: 4px;
 }
+
+
+/*
+=================================================
+Index view
+=================================================
+*/
 
 .search-form {
     margin: 150px 0px;
@@ -30,4 +41,95 @@ body {
     letter-spacing: 1px;
     margin-top: 10px;
     padding: 6px;
+}
+
+
+/*
+=================================================
+Dashboard view
+=================================================
+*/
+
+.summary-stats {
+    background-color: #eee;
+    padding: 15px 0px 25px 0px;
+}
+
+.summary-stats h2 {
+    color: #e74c3c;
+}
+
+.summary-stats h2, 
+.summary-stats h3 {
+    margin-bottom: 0px;
+    line-height: 28px;
+}
+
+.tag-list {
+    padding-top: 50px;
+}
+
+.tag-list .h4 {
+    font-size: 15px;
+}
+
+.percent-bar {
+    background-color: #ddd;
+    border-radius: 2px;
+    height: 5px;
+    margin-top: 16px;
+}
+
+.percent-bar .percentage {
+    background-color: #e74c3c;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    height: 5px;
+}
+
+.percent-text {
+    color: #666;
+    font-size: 14px;
+    padding-left: 0px;
+    padding-top: 7px;
+}
+
+.listing-list {
+    margin-top: 50px;
+}
+
+.listing-card {
+    background-color: #fff;
+    border-radius: 3px;
+    color: #000;
+    box-shadow: 1px 1px 1px #ebebeb;
+    font-size: 12px;
+    margin-bottom: 15px;
+    padding: 5px;
+}
+
+.listing-card .img-column {
+    padding-right: 0px;
+}
+
+.listing-card .small {
+    font-size: 9px;
+    line-height: 28px;
+}
+
+.listing-card .daily-views {
+    color: #e74c3c;
+}
+
+.listing-card .small.pad-left {
+    margin-left: 8px;
+}
+
+.listing-card .word-tag {
+    background-color: #efefef;
+    color: #999;
+    display: inline-block;
+    font-size: 11px;
+    margin: 0px 4px 4px 0px;
+    padding: 3px 5px 5px 5px;
 }
