Separated functions in index.js

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -46,7 +46,7 @@ block content
                             span #{tag[1]}
                             span.small %
             .col-md-8.listing-list
-                each item in results
+                each item in listings
                         .col-md-12
                             .div.listing-card
                                 .row
