--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -63,11 +63,11 @@ block content
                                                 span.small.pad-left FAVS:&nbsp;&nbsp;
                                                 | !{item.num_favorers} 
                                                 span.small.pad-left CREATED:&nbsp;&nbsp;
-                                                | Jan 31, 2015 
+                                                | !{new Date(item.original_creation_tsz*1000).toDateString().slice(4) }
                                                 span.small.pad-left PRICE:&nbsp;&nbsp;
                                                 | $!{item.price}
                                                 span.small.daily-views.pad-left AVG. DAILY VIEWS:&nbsp;&nbsp;
-                                                span.daily-views 43.7
+                                                span.daily-views !{Math.round(item.views/((Date.now() / 1000 - item.original_creation_tsz)/ 86400))}
                                         .row
                                             .col-md-12  
                                                 each tag in item.tags     
