--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -28,7 +28,7 @@ block content
                 .col-md-2
                     .row
                         .col-md-12
-                            h2 43.7
+                            h2 !{results.avg_views}
                     .row
                         .col-md-12
                             h6 AVERAGE DAILY VIEWS
@@ -37,8 +37,7 @@ block content
             .col-md-4.tag-list    
                 each tag in results.sorted_tags
                     .row
-                        .col-md-6.h4
-                            !{tag[0]}
+                        .col-md-6.h4 !{tag[0]}
                         .col-md-5
                             .percent-bar
                                 .percentage(style="width: #{tag[1]}%")
@@ -54,8 +53,7 @@ block content
                                         img(src='#{item.MainImage.url_170x135}').img-responsive
                                     .col-md-9
                                         .row
-                                            .col-md-12
-                                                !{item.title}
+                                            .col-md-12 !{item.title}
                                         .row
                                             .col-md-12
                                                 span.small VIEWS:&nbsp;&nbsp;
@@ -67,7 +65,7 @@ block content
                                                 span.small.pad-left PRICE:&nbsp;&nbsp;
                                                 | $!{item.price}
                                                 span.small.daily-views.pad-left AVG. DAILY VIEWS:&nbsp;&nbsp;
-                                                span.daily-views !{Math.round(item.views/((Date.now() / 1000 - item.original_creation_tsz)/ 86400))}
+                                                span.daily-views !{item.avg_views}
                                         .row
                                             .col-md-12  
                                                 each tag in item.tags     
