Autofocus search box on index view

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,6 @@ block content
             form(name="search-form", action="/", method="POST").search-form
                 .form-group
                     label.sr-only(for="search_tag")
-                    input(type="text", name="search_tag", placeholder="Search for a tag").form-control
+                    input(type="text", name="search_tag", placeholder="Search for a tag", autofocus="autofocus").form-control
                     input(type="submit", value="Submit").btn.col-md-12
 
