--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,7 @@ html
   head
     title= title
 
-    // Bootstrap minified CSS CDN
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
-
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
