--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -4,58 +4,58 @@ block content
     .container-fluid.summary-stats
         .container
             .row
-                .col-md-3
+                .col-sm-4.col-md-3.col-lg-3
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12 
                             h3 !{results.search_term}
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12
                             h6 YOUR SEARCH TERM
-                .col-md-2
+                .col-sm-3.col-md-2.col-lg-2
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12
                             h2 #{results.total}
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12
                             h6 TOTAL LISTINGS
-                .col-md-2
+                .col-sm-3.col-md-2.col-lg-2
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12
                             h2 !{results.sorted_tags.length}
                     .row
-                        .col-md-12 
+                        .col-sm-12.col-md-12.col-lg-12
                             h6 TAG SUGGESTIONS
-                .col-md-2
+                .col-sm-2.col-md-2.col-lg-2
                     .row
-                        .col-md-12
+                        .col-sm-12.col-md-12.col-lg-12
                             h2 !{results.avg_views}
                     .row
-                        .col-md-12
+                        .col-sm-12.col-md-12.col-lg-12
                             h6 AVERAGE DAILY VIEWS
     .container
         .row
-            .col-md-4.tag-list    
+            .col-sm-3.col-md-3.col-lg-4.tag-list    
                 each tag in results.sorted_tags
                     .row
-                        .col-md-6.h4 !{tag[0]}
-                        .col-md-5
+                        .col-sm-10.col-md-6.col-lg-6.h4 !{tag[0]}
+                        .hidden-sm.col-md-5.col-lg-5
                             .percent-bar
                                 .percentage(style="width: #{tag[1]}%")
-                        .col-md-1.percent-text
+                        .col-sm-2.col-md-1.col-lg-1.percent-text
                             span #{tag[1]}
                             span.small %
-            .col-md-8.listing-list
+            .col-sm-9.col-md-9.col-lg-8.listing-list
                 each item in results.listings
-                        .col-md-12
+                        .col-sm-12.col-md-12.col-lg-12
                             .div.listing-card
                                 .row
-                                    .col-md-3.img-column
+                                    .col-sm-3.col-md-3.col-lg-3.img-column
                                         img(src='#{item.MainImage.url_170x135}').img-responsive
-                                    .col-md-9
+                                    .col-sm-9.col-md-9.col-lg-9
                                         .row
-                                            .col-md-12 !{item.title}
+                                            .col-md-12.col-lg-12 !{item.title}
                                         .row
-                                            .col-md-12
+                                            .hidden-sm.col-md-12.col-lg-12
                                                 span.small VIEWS:&nbsp;&nbsp;
                                                 | !{item.views} 
                                                 span.small.pad-left FAVS:&nbsp;&nbsp;
@@ -66,7 +66,23 @@ block content
                                                 | $!{item.price}
                                                 span.small.daily-views.pad-left AVG. DAILY VIEWS:&nbsp;&nbsp;
                                                 span.daily-views !{item.avg_views}
-                                        .row
-                                            .col-md-12  
+                                            .visible-sm.col-sm-12.small-stat-row
+                                                span.small VIEWS:&nbsp;&nbsp;
+                                                | !{item.views} 
+                                                span.small.pad-left FAVS:&nbsp;&nbsp;
+                                                | !{item.num_favorers} 
+                                                span.small.pad-left CREATED:&nbsp;&nbsp;
+                                                | !{new Date(item.original_creation_tsz*1000).toDateString().slice(4) }
+                                                br
+                                                span.small PRICE:&nbsp;&nbsp;
+                                                | $!{item.price}
+                                                span.small.daily-views.pad-left AVG. DAILY VIEWS:&nbsp;&nbsp;
+                                                span.daily-views !{item.avg_views}
+                                        .row.hidden-sm
+                                            .col-md-12.col-lg-12
                                                 each tag in item.tags     
                                                     .word-tag #{tag}
+                                .row.visible-sm
+                                    .col-sm-12.small-tag-row
+                                        each tag in item.tags     
+                                            .word-tag #{tag}
