Switched POST to GET for index view tag search

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,9 +3,9 @@ extends layout
 block content
     .row
         .col-md-4.col-md-offset-4
-            form(name="search-form", action="/", method="POST").search-form
+            form(name="search-form", action="/search", method="GET").search-form
                 .form-group
-                    label.sr-only(for="search_tag")
-                    input(type="text", name="search_tag", placeholder="Search for a tag", autofocus="autofocus").form-control
+                    label.sr-only(for="tag")
+                    input(type="text", name="tag", placeholder="Search for a tag", autofocus="autofocus").form-control
                     input(type="submit", value="Submit").btn.col-md-12
 
