--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,10 +65,6 @@ Dashboard view
     line-height: 28px;
 }
 
-.tag-list {
-    padding-top: 50px;
-}
-
 .tag-list .h4 {
     font-size: 15px;
 }
@@ -94,8 +90,27 @@ Dashboard view
     padding-top: 7px;
 }
 
-.listing-list {
-    margin-top: 50px;
+.nav-pills {
+    margin: 40px 0px 12px 0px;
+}
+
+.nav-pills>li {
+    float: right;
+    font-size: 9px;
+    margin-right: 15px;
+}
+
+.nav-pills>li>a {
+    border-radius: 10px;
+    color: #555;
+    padding: 4px 10px;
+}
+
+.nav-pills>li.active>a, 
+.nav-pills>li.active>a:focus, 
+.nav-pills>li.active>a:hover {
+    background-color: #ddd;
+    color: #555;
 }
 
 .listing-card {
