--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,11 @@ html
 
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    
+
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
+    block js-from-view
+
   body
     .navbar.navbar-default
         .container
