Slightly darken listing card shadow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,7 +117,7 @@ Dashboard view
     background-color: #fff;
     border-radius: 3px;
     color: #000;
-    box-shadow: 1px 1px 1px #ebebeb;
+    box-shadow: 1px 1px 1px #e9e9e9;
     font-size: 12px;
     margin-bottom: 15px;
     padding: 5px;
