--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,11 @@ body {
 
 
 .navbar {
+    background-color: #fafafa;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.04);
+    height: 54px;
     margin-bottom: 0px;
+    padding-top: 4px;
 }
 
 .navbar-default {
@@ -91,7 +95,7 @@ Dashboard view
 }
 
 .nav-pills {
-    margin: 40px 0px 12px 0px;
+    margin: 30px 0px 12px 0px;
 }
 
 .nav-pills>li {
@@ -159,4 +163,17 @@ Dashboard view
     font-size: 11px;
     margin: 0px 4px 4px 0px;
     padding: 3px 5px 5px 5px;
+}
+
+.nav-search input {
+    border-radius: 30px;
+    min-width: 230px;
+}
+
+.nav-search>.btn {
+    background-color: transparent;
+    color: #999;
+    font-size: 16px;
+    margin-left: 4px;
+    padding: 0px;
 }
