Add link to external Etsy page for each listing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,6 +127,10 @@ Dashboard view
     padding: 5px;
 }
 
+.listing-card a {
+    color: #000;
+}
+
 .listing-card .img-column {
     padding-right: 0px;
 }
