--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,11 +8,11 @@ body {
 
 
 .navbar {
-    background-color: #fafafa;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.04);
-    height: 54px;
+    background-color: #fbfbfb;
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.04); */
+    height: 60px;
     margin-bottom: 0px;
-    padding-top: 4px;
+    padding-top: 7px;
 }
 
 .navbar-default {
@@ -110,15 +110,15 @@ Dashboard view
 
 .nav-pills>li>a {
     border-radius: 10px;
-    color: #555;
+    color: #999;
     padding: 4px 10px;
 }
 
 .nav-pills>li.active>a, 
 .nav-pills>li.active>a:focus, 
 .nav-pills>li.active>a:hover {
-    background-color: #ddd;
-    color: #555;
+    background-color: #e5e5e5;
+    color: #888;
 }
 
 .listing-card {
