--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -43,7 +43,7 @@ block content
                 ul.nav.nav-pills
                     li#sort-daily(role='presentation'): a(href='?sort=daily') DAILY VIEWS
                     li#sort-price(role='presentation'): a(href='?sort=price') PRICE
-                    li#sort-creation(role='presentation'): a(href='?sort=creation') CREATION DATE
+                    li#sort-creation(role='presentation'): a(href='?sort=creation') MOST RECENT
                     li#sort-favorites(role='presentation'): a(href='?sort=favorites') FAVORITES
                     li#sort-views(role='presentation'): a(href='?sort=views') VIEWS
         .row
