--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     .row
         .col-md-4.col-md-offset-4
-            form(name="search-form", action="/search", method="GET").search-form
+            form(name="search-form", action="/search", method="GET").landing-search
                 .form-group
                     label.sr-only(for="tag")
                     input(type="text", name="tag", placeholder="Search for a tag", autofocus="autofocus").form-control
