--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,10 +22,10 @@ html
                     span.icon-bar
                 a.navbar-brand(href="/") ETSY SELLER METRICS
             .collapse.navbar-collapse#nav-collapsed-content
-                form.navbar-form.navbar-right.nav-search(role='search', name='search-form', action='/search', method='GET')
+                form.navbar-form.navbar-right.search(role='search', name='search-form', action='/search', method='GET')
                     .form-group
                         input.form-control.input-sm(type='text', name='tag', placeholder='Find listings by tag')
-                    button.btn.btn-sm.btn-nav-search(type='submit')
+                    button.btn.btn-sm(type='submit')
                         span.glyphicon.glyphicon-search
 
     block content
