--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
-    block js-from-view
+    script(src='/js/base.js')
 
   body
     .navbar.navbar-default
