--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ Base styling
 */
 
 body {
-    background-color: #f5f5f5;
+    background-color: #f9f9f9;
     font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
 }
 
@@ -100,7 +100,7 @@ Dashboard view
 /* Summary statistics in container below navbar */
 .stat-summary {
     background-color: #eee;
-    padding: 15px 0 25px 0;
+    padding-top: 30px;
 }
 
 .stat-summary h2, 
@@ -109,31 +109,64 @@ Dashboard view
     line-height: 28px;
 }
 
+/* Tabs to toggle result panes */
+.toggle-results {
+    margin-top: 50px;
+}
+
+.nav-tabs.nav-justified>li>a {
+    border-bottom: none;
+    color: #999;
+}
+
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover {
+    background-color: #f9f9f9;
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, .03);
+    color: #666;
+}
+
+.nav-tabs.nav-justified>.active>a,
+.nav-tabs.nav-justified>.active>a:focus,
+.nav-tabs.nav-justified>.active>a:hover {
+    color: #666;
+    border: 1px solid #f9f9f9;
+}
+
+.tab-pane {
+    background-color: #f9f9f9;
+}
+
 /* Bootstrap pills for sorting options */
-.nav-pills {
+.sort-listings .nav-pills {
     margin: 30px 0 12px 0;
 }
 
-.nav-pills>li {
+.sort-listings .nav-pills>li {
     float: right;
     font-size: 9px;
     margin-right: 15px;
 }
 
-.nav-pills>li>a {
+.sort-listings .nav-pills>li>a {
     border-radius: 10px;
     color: #999;
     padding: 4px 10px;
 }
 
-.nav-pills>li.active>a, 
-.nav-pills>li.active>a:focus, 
-.nav-pills>li.active>a:hover {
+.sort-listings .nav-pills>li.active>a, 
+.sort-listings .nav-pills>li.active>a:focus, 
+.sort-listings .nav-pills>li.active>a:hover {
     background-color: #e5e5e5;
     color: #888;
 }
 
 /* Tag suggestion list in left column */
+.list-tags {
+    margin-top: 30px;
+}
+
 .list-tags .h4,
 .list-tags a {
     color: #333;
@@ -144,7 +177,7 @@ Dashboard view
     background-color: #ddd;
     border-radius: 2px;
     height: 5px;
-    margin-top: 16px;
+    margin-top: 6px;
 }
 
 .percent-bar .fill {
@@ -157,7 +190,6 @@ Dashboard view
 .percent-text {
     color: #666;
     font-size: 14px;
-    padding-left: 0;
     padding-top: 7px;
 }
 
@@ -214,4 +246,13 @@ Dashboard view
 
 .listing-card .sm-view-tags {
     padding-top: 8px;
+}
+
+.explanation {
+    color: #777;
+    margin-top: 60px;
+}
+
+.explanation h3 {
+    color: #555;
 }
